[tool.poetry]
name = "convmoji"
version = "0.1.6"
description = "A simple cli tool to commit Conventional Commits with emojis."
authors = ["arrrrrmin <info@dotarmin.info>", "defel <defel@no-reply>"]
maintainers = ["arrrrrmin <info@dotarmin.info>", "defel <defel@no-reply>"]
homepage = "https://github.com/KnowKit/convmoji"
documentation = "https://github.com/KnowKit/convmoji"
readme = "README.md"
keywords = ["conventional", "commits", "emoji", "cli", "tool"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
convmoji = "convmoji.commit:app"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
flake8 = "^3.9.2"
flake8-unused-arguments = "^0.0.6"
pytest-cov = "^3.0.0"
poethepoet = "^0.10.0"
devtools = "^0.8.0"

[tool.black]
line-length = 90
target-version = ['py38']

[tool.poe.tasks]
clean-up = "rm -rf .pytest_cache dist/ ./**/__pycache__ .coverage .coverage.* coverage*.xml"
coverage = "pytest --cov --cov-config=.coveragerc tests/ --cov-report xml"
lint = [
    { "cmd" = "black convmoji/ --check --diff --verbose" },
    { "cmd" = "flake8 convmoji/" },
]
format = "black convmoji/ tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
